[gd_scene load_steps=6 format=2]

[ext_resource path="res://tscn/chara/dragK.gd" type="Script" id=1]
[ext_resource path="res://tscn/chara/anim.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/chara/charaItem.gd" type="Script" id=3]
[ext_resource path="res://tscn/chara/popLv.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/ying/ying.png" type="Texture" id=5]

[node name="charaItem" type="NinePatchRect"]
margin_right = 62.0
margin_bottom = 108.0
rect_min_size = Vector2( 62, 108 )
script = ExtResource( 3 )

[node name="c_" type="Node2D" parent="." groups=["charaV"]]
position = Vector2( 31, 83 )

[node name="Ying" type="Sprite" parent="c_"]
self_modulate = Color( 0, 0, 0, 0.470588 )
position = Vector2( 0, -2 )
scale = Vector2( 0.796875, 0.414063 )
texture = ExtResource( 5 )

[node name="anim" parent="c_" instance=ExtResource( 2 )]
position = Vector2( 3, -40 )
frame = 6

[node name="ui" type="Node2D" parent="c_"]
z_index = 10

[node name="dragK" type="TextureButton" parent="c_/ui"]
margin_left = -22.0
margin_top = -64.0
margin_right = 20.0
margin_bottom = -1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="popLv" parent="." instance=ExtResource( 4 )]
margin_left = 23.0
margin_top = 93.0
margin_right = 40.0
margin_bottom = 105.0

[node name="name" type="Label" parent="."]
margin_left = -4.0
margin_top = -2.0
margin_right = 66.0
margin_bottom = 37.0
text = "1"
align = 1
autowrap = true

[connection signal="mouse_entered" from="c_/ui/dragK" to="." method="_on_dragK_mouse_entered"]
[connection signal="mouse_exited" from="c_/ui/dragK" to="." method="_on_dragK_mouse_exited"]
[connection signal="pressed" from="c_/ui/dragK" to="." method="_on_dragK_pressed"]
